--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ layout: default
     <h1 class="headline--index">hire me</h1>
     <a href="mailto:robinfoxin@gmail.com" class="button">email</a>
     <div class="social">
-      <a class="twitter hide-text" href="https://twitter.com/smugfox" title="twitter" target="_blank">twitter</a>
-      <a class="github hide-text" href="https://github.com/smugfox" title="github" target="_blank">github</a>
+      <a class="twitter hide-text" href="http://twitter.com/{{ site.twitter_username }}" title="twitter" target="_blank">twitter</a>
+      <a class="github hide-text" href="http://github.com/{{ site.github_username }}" title="github" target="_blank">github</a>
     </div>
   </div> 
 </section>
