Making more changes to CSS of Portfolio

--- a/articles.html
+++ b/articles.html
@@ -4,7 +4,7 @@ title: all articles
 permalink: /articles/
 ---
 
-<div>
+<section class="section--all-articles">
 	<header>
 		<h1>{{ page.title }}</h1>
 	</header>
@@ -15,4 +15,4 @@ permalink: /articles/
 			</li>
 		{% endfor %}
 	</ul>
-</div>
+</section>
