--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
     <div class="social">
       <a class="twitter hide-text" href="http://twitter.com/{{ site.twitter_username }}" title="twitter" target="_blank">twitter</a>
       <a class="github hide-text" href="http://github.com/{{ site.github_username }}" title="github" target="_blank">github</a>
+      <a class="dribbble hide-text" href="https://dribbble.com/{{ site.dribbble_username }}" title="dribbble" target="_blank">dribbble</a>
     </div>
   </div>
 </section>
