Renamed class for hire me header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 <section class="section--connect">
   <div class="container">
-    <h1 class="headline--index">Hire Me</h1>
+    <h1 class="headline--hire">Hire Me</h1>
     <a href="mailto:robinfoxin@gmail.com" class="button">Email</a>
     <div class="social">
       <a class="twitter hide-text" href="http://twitter.com/{{ site.twitter_username }}" title="twitter" target="_blank">twitter</a>
